--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Коротких Степан Александрович</title>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,7 +28,7 @@
 <body>
     <h1>Коротких Степан Александрович</h1>
     <img src="bio.jpg" alt="Мое фото" class="my-photo">
-    <p style="font-style: italic; color: #555;">мое фото</p>
+    <p style="font-style: italic; color: #555;">Visit-Web-Card</p>
     <hr>
     <p>
         <a href="page_1.html">Перейти к информации обо мне</a>
